--- a/src/scss/layout/_lineup.scss
+++ b/src/scss/layout/_lineup.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 
@@ -53,14 +54,16 @@
 
 .bg-amarillo {
     background-color: v.$amarillo;
+
     li:nth-child(odd) {
-        background-color: lighten(v.$amarillo, 5%);
+        background-color: color.adjust(v.$amarillo, $lightness: 5%);
     }
 }
 
 .bg-verde {
     background-color: v.$verde;
+
     li:nth-child(odd) {
-    background-color: lighten(v.$verde, 5%);
+        background-color: color.adjust(v.$verde, $lightness: 5%);
     }
 }
